--- a/src/templates/app/product/form.phtml
+++ b/src/templates/app/product/form.phtml
@@ -70,13 +70,13 @@
         <div class="card-body text-center">
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_es_2', 'recommendedDimensions' => '2480px x 1754px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_es_2', 'recommendedDimensions' => $data['recommendedDimensions'][2]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_es_3', 'recommendedDimensions' => '2480px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_es_3', 'recommendedDimensions' => $data['recommendedDimensions'][3]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_es_6', 'recommendedDimensions' => '1240px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_es_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_es_6', 'recommendedDimensions' => $data['recommendedDimensions'][6]]) ?>
                 </div>
             </div>
         </div>
@@ -91,13 +91,13 @@
         <div class="card-body text-center">
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_en_2', 'recommendedDimensions' => '2480px x 1754px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_en_2', 'recommendedDimensions' => $data['recommendedDimensions'][2]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_en_3', 'recommendedDimensions' => '2480px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_en_3', 'recommendedDimensions' => $data['recommendedDimensions'][3]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_en_6', 'recommendedDimensions' => '1240px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_en_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_en_6', 'recommendedDimensions' => $data['recommendedDimensions'][6]]) ?>
                 </div>
             </div>
         </div>
@@ -113,13 +113,13 @@
         <div class="card-body text-center">
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_fr_2', 'recommendedDimensions' => '2480px x 1754px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_2', 'title' => __('app.product.image_1_2'), 'inputName' => 'image_fr_2', 'recommendedDimensions' => $data['recommendedDimensions'][2]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_fr_3', 'recommendedDimensions' => '2480px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_3', 'title' => __('app.product.image_1_3'), 'inputName' => 'image_fr_3', 'recommendedDimensions' => $data['recommendedDimensions'][3]]) ?>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-4">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_fr_6', 'recommendedDimensions' => '1240px x 1169px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'file-image_fr_6', 'title' => __('app.product.image_1_6'), 'inputName' => 'image_fr_6', 'recommendedDimensions' => $data['recommendedDimensions'][6]]) ?>
                 </div>
             </div>
         </div>
