Corrección, icono flyer

--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -165,6 +165,11 @@ form.data-form .card .card-body .file-info-container .file-info .row > *{
     height: 24px;
 }
 
+.custom-svg-icon.icon-flyer{
+    width: 22px;
+    height: 22px;
+}
+
 .custom-svg-icon.icon-prescription{
     width: 22px;
     height: 22px;
