--- a/src/templates/app/inc/header/sidebar.phtml
+++ b/src/templates/app/inc/header/sidebar.phtml
@@ -24,7 +24,7 @@
                 <li class="nav-item py-1">
                     <!--begin::Navbar link-->
                     <a href="/app/booklets/<?php echo App\Constant\BookletType::Flyer ?>" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuFlyer, 'active'); ?>">
-                        <?php $this->insert("inc/common/icon/booklet") ?>
+                        <?php $this->insert("inc/common/icon/flyer") ?>
                         <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('table.booklet_type.F.plural') ?></span>
                     </a>
                     <!--end::Navbar link-->
