--- a/src/templates/app/user/list.phtml
+++ b/src/templates/app/user/list.phtml
@@ -40,6 +40,7 @@
 <!-- Data priority corresponde a la prioridad para mostrarse visible o bajo el botón (+) en responsive -->
 <th data-priority="6"></th>
 <th data-priority="4"><?= __ss('app.common.id') ?></th>
+<th data-priority="8"><span class="d-none"><?= __ss('app.common.wp_id') ?></span><i title="<?= __ss('app.common.wp_id') ?>" class="fab fa-wordpress-simple fs-3"></i></th>
 <th data-priority="3"><?= __ss('app.user.name') ?></th>
 <th data-priority="3"><?= __ss('app.user.surnames') ?></th>
 <th data-priority="4"><?= __ss('app.user.nickname') ?></th>
