--- a/src/templates/app/booklet/form.phtml
+++ b/src/templates/app/booklet/form.phtml
@@ -184,6 +184,6 @@
             </div>
         </div>
 
-        <?php $this->insert("inc/common/stepper_actions", ['cmyk' => $data['type'] == App\Constant\BookletType::Booklet]) ?>
+        <?php $this->insert("inc/common/stepper_actions", ['cmyk' => true]) ?>
     </div>
 </form>
