--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -40,7 +40,8 @@ body.profile-B .profile-deny.profile-B {
     background-color: var(--bs-primary-active) !important;
 }
 
-.button-filter.btn-light-primary, .button-filter.btn-light-primary i {
+.button-filter.btn-light-primary, .button-filter.btn-light-primary i,
+.app-header .btn-back-wp, .app-header .btn-back-wp i {
     background-color: var(--bs-primary);
     color: var(--bs-primary-light);
 }
@@ -352,4 +353,16 @@ label.error{
 
 .booklet-layouts ~ .select2 {
     display: none;
+}
+
+.header-project-title {
+    font-size: 26px;
+    font-weight: bold;
+    color: var(--bs-primary-active);
+}
+
+@media (min-width: 992px) {
+    .app-header .btn-back-wp {
+        margin-left: -14px;
+    }
 }
