--- a/src/templates/app/main.phtml
+++ b/src/templates/app/main.phtml
@@ -9,21 +9,31 @@
             <!--begin::Header-->
             <div id="kt_app_header" class="app-header">
                 <!--begin::Header container-->
-                <div class="app-container container-fluid d-flex align-items-stretch justify-content-between" id="kt_app_header_container">
-                    <!--begin::Header logo-->
-                    <div class="app-header-logo d-flex align-items-center me-lg-10">
-                        <!--begin::Mobile toggle-->
-                        <div class="btn btn-icon btn-color-gray-500 btn-active-color-primary w-35px h-35px ms-n2 me-2 d-flex d-lg-none" id="kt_app_sidebar_mobile_toggle">
-                            <i class="ki-outline ki-abstract-14 fs-1"></i>
+                <div class="app-container container-fluid d-flex align-items-center justify-content-between" id="kt_app_header_container">
+                    <div class="d-flex align-items-center">
+                        <a href="<?= $params['WP_BACK_URL'] ?>" class="btn btn-sm me-6 me-lg-10 text-nowrap btn-back-wp">
+                            <i class="la la-angle-left pe-0"></i>
+                            <span class="d-none d-lg-inline-block ms-1"><?php echo __('app.common.back'); ?></span>
+                        </a>    
+
+                        <!--begin::Header logo-->
+                        <div class="app-header-logo d-flex align-items-center me-sm-5">
+                            <!--begin::Mobile toggle-->
+                            <div class="btn btn-icon btn-color-gray-500 btn-active-color-primary w-35px h-35px ms-n2 me-2 d-flex d-lg-none" id="kt_app_sidebar_mobile_toggle">
+                                <i class="ki-outline ki-abstract-14 fs-1"></i>
+                            </div>
+                            <!--end::Mobile toggle-->
+                            <!--begin::Logo image-->
+                            <a href="/">
+                                <img alt="Logo asc" src="/app/img/logo.png" class=" ms-lg-n3 me-lg-2 w-80px" />
+                            </a>
+                            <!--end::Logo image-->
                         </div>
-                        <!--end::Mobile toggle-->
-                        <!--begin::Logo image-->
-                        <a href="/">
-                            <img alt="Logo asc" src="/app/img/logo.png" class=" ms-lg-n3 me-lg-2 w-80px" />
-                        </a>
-                        <!--end::Logo image-->
+                        <!--end::Header logo-->
+
+                        <div class="header-project-title me-5 d-none d-sm-block"><?= __('app.header.project_title') ?></div>
                     </div>
-                    <!--end::Header logo-->
+
                     <!--begin::Header wrapper-->
                     <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1">
                         <!--begin::Menu wrapper-->
